(bck): enhancement: refactor (WIP)

--- a/backend/pixelfreebies-service/src/main/resources/templates/index.html
+++ b/backend/pixelfreebies-service/src/main/resources/templates/index.html
@@ -207,6 +207,7 @@
                 bottom: 0;
                 z-index: 1; /* Ensure tires are above the road */
             }
+            
             .truckTires svg {
                 width: 30px; /* Increased size */
             }
@@ -221,6 +222,7 @@
                 border-radius: 3px;
                 z-index: 2; /* Ensure road is above the truck */
             }
+            
             .road::before {
                 content: "";
                 position: absolute;
@@ -232,6 +234,7 @@
                 animation: roadAnimation 1.4s linear infinite;
                 border-left: 10px solid white; /* White border for visibility */
             }
+            
             .road::after {
                 content: "";
                 position: absolute;
@@ -418,7 +421,6 @@
                     <svg
                             xml:space="preserve"
                             viewBox="0 0 453.459 453.459"
-                            xmlns:xlink="http://www.w3.org/1999/xlink"
                             xmlns="http://www.w3.org/2000/svg"
                             id="Capa_1"
                             version="1.1"
@@ -439,7 +441,8 @@
             </svg>
                 </div>
                 <div class="loading-text">
-                    <p>You will now witness the genius behind implementation of <strong>PixelFreebies</strong> website! 🚚✨</p>
+                    <p>You will now witness the genius behind implementation of <strong>PixelFreebies</strong> website!
+                        🚚✨</p>
                 </div>
             </div>
         </div>
@@ -465,4 +468,3 @@
         </script>
     </body>
 </html>
-
