(bck): enhancement: refactor (WIP)

--- a/backend/pixelfreebies-service/src/main/resources/templates/index.html
+++ b/backend/pixelfreebies-service/src/main/resources/templates/index.html
@@ -202,7 +202,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                padding: 0px 10px 0px 15px;
+                padding: 0 10px 0 15px;
                 position: absolute;
                 bottom: 0;
                 z-index: 1; /* Ensure tires are above the road */
