(bck): enhancement: refactor. lamp animation problem (WIP)

--- a/backend/pixelfreebies-service/src/main/resources/templates/index.html
+++ b/backend/pixelfreebies-service/src/main/resources/templates/index.html
@@ -448,8 +448,7 @@
                 </div>
                 <div class="loading-text">
                     <p id="typewriter-text"></p>
-                    <p id="countdown" style="margin-top: 13px">Redirecting in <span id="countdown-timer">5</span>
-                        seconds...</p> <!-- Default countdown text -->
+                    <p id="countdown" style="margin-top: 13px">Redirecting in <u><span id="countdown-timer">5</span></u> seconds...</p> <!-- Default countdown text -->
                 </div>
             </div>
         </div>
